Fix flickering when page content is scrollable
Problem occur in iOS PhoneGap environment

--- a/src/components/popup/popup.less
+++ b/src/components/popup/popup.less
@@ -87,15 +87,6 @@ html.with-statusbar {
     }
   }
 }
-html.with-modal-popup {
-  .framework7-root {
-    > .views, > .view, > .panel {
-      .page-content {
-        .not-scrollable();
-      }
-    }
-  }
-}
 & when (@includeIosTheme) {
   @import url('./popup-ios.less');
 }
